Add a catchall via vercel rewrites configuration

--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "description": "",
-  "main": "add.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npx vercel dev"
   },
   "author": "",
   "license": "ISC",
